--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-basementSublimeProject.sublime-workspace
-basementSublimeProject.sublime-project
+DrapetsWeb.sublime-workspace
+DrapetsWeb.sublime-project
+.DC_STore
